--- a/api/templates/single_order_completed.html
+++ b/api/templates/single_order_completed.html
@@ -120,7 +120,7 @@
                     <h3>X {{nft['quantity']}}</h3>
                     <h6 class="azul">{{nft['name']}}</h6>
                     <hr>
-                    <h6>{{nft['listed']['fixed_amount']}} ${{blockchain['currency']}}
+                    <h6>{{nft['old_fixed_amount']}} ${{blockchain['currency']}}
                         <h6 class="text-secondary">{{nft['description']}}</h6>
                 </div>
                 <div class="col-3"></div>
