--- a/api/templates/landing.html
+++ b/api/templates/landing.html
@@ -90,6 +90,8 @@
             <div class="row py-5">
                 <div class="col-12 text-center pb-5">
                     <h1>Explorar, coleccionar y vender NFT</h1>
+                    <h3 style="color:rgb(116, 180, 244)">Gana comisiones por cada item</h3>
+                    <h5 class="azul">Publica tu arte sin restricciones</h5>
                 </div>
                 <div class="col-1"></div>
                 <div class="col-10">
@@ -129,6 +131,7 @@
                     </div>
                 </div>
                 <div class="col-1"></div>
+
             </div>
             <div class="row">
                 <div class="col-2">
@@ -189,13 +192,138 @@
                 </div>
                 <div class="col-1"></div>
                 {% endfor %}
-                <hr>
             </div>
-
             <div class="row">
-                <div class="col">
+                <hr>
+                <div class="col-12 pb-2">
                     <h3>Buscar por categoría</h3>
                 </div>
+                <hr>
+                <h4>▶ Ánime</h4>
+                {% for n in nfts %}
+                {% if 'listed' in n and n['listed']['category'] == 'Anime'%}
+                <div class="col-2 py-2">
+                    <div class="card"
+                        style="width: 15rem; background-color: rgb(53 56 64); border-radius: 1rem; bottom:-0.5rem; left: 1rem; padding: 0.5rem;">
+                        <a href="/nft/details/{{n['_id']}}" class="text-decoration-none">
+                            <img src="{{n['image_url']}}" class="card-img-top" style="border-radius: 0.5rem;">
+                            <div class="card-body">
+                                <h6 class="card-title blanco pb-1">{{n['name']}}</h6>
+                                <p class="card-text azul">Descripción: {{n['description']}}</p>
+                                {% if n['listed'] %}
+                                <p class="blanco">Precio: {{n['listed']['fixed_amount']}} ${{n['chain']['currency']}}
+                                </p>
+                                <p class="blanco">Cantidad: {{n['quantity']}}</p>
+                                {% else %}
+                                <p class="text-danger">Item aún sin listar</p>
+                                <p class="blanco">0 ${{n['chain']['currency']}}</p>
+                                {% endif %}
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                {% endif %}
+                {% endfor %}
+                <h4 class="pt-4">▶ Película</h4>
+                {% for n in nfts %}
+                {% if 'listed' in n and n['listed']['category'] == 'Película'%}
+                <div class="col-2 py-2">
+                    <div class="card"
+                        style="width: 15rem; background-color: rgb(53 56 64); border-radius: 1rem; bottom:-0.5rem; left: 1rem; padding: 0.5rem;">
+                        <a href="/nft/details/{{n['_id']}}" class="text-decoration-none">
+                            <img src="{{n['image_url']}}" class="card-img-top" style="border-radius: 0.5rem;">
+                            <div class="card-body">
+                                <h6 class="card-title blanco pb-1">{{n['name']}}</h6>
+                                <p class="card-text azul">Descripción: {{n['description']}}</p>
+                                {% if n['listed'] %}
+                                <p class="blanco">Precio: {{n['listed']['fixed_amount']}} ${{n['chain']['currency']}}
+                                </p>
+                                <p class="blanco">Cantidad: {{n['quantity']}}</p>
+                                {% else %}
+                                <p class="text-danger">Item aún sin listar</p>
+                                <p class="blanco">0 ${{n['chain']['currency']}}</p>
+                                {% endif %}
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                {% endif %}
+                {% endfor %}
+                <h4 class="pt-4">▶ Serie de televisión</h4>
+                {% for n in nfts %}
+                {% if 'listed' in n and n['listed']['category'] == 'Serie' %}
+                <div class="col-2 py-2">
+                    <div class="card"
+                        style="width: 15rem; background-color: rgb(53 56 64); border-radius: 1rem; bottom:-0.5rem; left: 1rem; padding: 0.5rem;">
+                        <a href="/nft/details/{{n['_id']}}" class="text-decoration-none">
+                            <img src="{{n['image_url']}}" class="card-img-top" style="border-radius: 0.5rem;">
+                            <div class="card-body">
+                                <h6 class="card-title blanco pb-1">{{n['name']}}</h6>
+                                <p class="card-text azul">Descripción: {{n['description']}}</p>
+                                {% if n['listed'] %}
+                                <p class="blanco">Precio: {{n['listed']['fixed_amount']}} ${{n['chain']['currency']}}
+                                </p>
+                                <p class="blanco">Cantidad: {{n['quantity']}}</p>
+                                {% else %}
+                                <p class="text-danger">Item aún sin listar</p>
+                                <p class="blanco">0 ${{n['chain']['currency']}}</p>
+                                {% endif %}
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                {% endif %}
+                {% endfor %}
+                <h4 class="pt-4">▶ Abstracto</h4>
+                {% for n in nfts %}
+                {% if 'listed' in n and n['listed']['category'] == 'Abstracto'%}
+                <div class="col-2 py-2">
+                    <div class="card"
+                        style="width: 15rem; background-color: rgb(53 56 64); border-radius: 1rem; bottom:-0.5rem; left: 1rem; padding: 0.5rem;">
+                        <a href="/nft/details/{{n['_id']}}" class="text-decoration-none">
+                            <img src="{{n['image_url']}}" class="card-img-top" style="border-radius: 0.5rem;">
+                            <div class="card-body">
+                                <h6 class="card-title blanco pb-1">{{n['name']}}</h6>
+                                <p class="card-text azul">Descripción: {{n['description']}}</p>
+                                {% if n['listed'] %}
+                                <p class="blanco">Precio: {{n['listed']['fixed_amount']}} ${{n['chain']['currency']}}
+                                </p>
+                                <p class="blanco">Cantidad: {{n['quantity']}}</p>
+                                {% else %}
+                                <p class="text-danger">Item aún sin listar</p>
+                                <p class="blanco">0 ${{n['chain']['currency']}}</p>
+                                {% endif %}
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                {% endif %}
+                {% endfor %}
+                <h4 class="pt-4">▶ Misceláneo</h4>
+                {% for n in nfts %}
+                {% if 'listed' in n and n['listed']['category'] == 'Misceláneo'%}
+                <div class="col-2 py-2">
+                    <div class="card"
+                        style="width: 15rem; background-color: rgb(53 56 64); border-radius: 1rem; bottom:-0.5rem; left: 1rem; padding: 0.5rem;">
+                        <a href="/nft/details/{{n['_id']}}" class="text-decoration-none">
+                            <img src="{{n['image_url']}}" class="card-img-top" style="border-radius: 0.5rem;">
+                            <div class="card-body">
+                                <h6 class="card-title blanco pb-1">{{n['name']}}</h6>
+                                <p class="card-text azul">Descripción: {{n['description']}}</p>
+                                {% if n['listed'] %}
+                                <p class="blanco">Precio: {{n['listed']['fixed_amount']}} ${{n['chain']['currency']}}
+                                </p>
+                                <p class="blanco">Cantidad: {{n['quantity']}}</p>
+                                {% else %}
+                                <p class="text-danger">Item aún sin listar</p>
+                                <p class="blanco">0 ${{n['chain']['currency']}}</p>
+                                {% endif %}
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                {% endif %}
+                {% endfor %}
             </div>
         </div>
     </section>
