--- a/api/templates/single_order_completed.html
+++ b/api/templates/single_order_completed.html
@@ -110,7 +110,7 @@
                     <h6>Documento: {{order['client']['document']}}</h6>
                     <h4 class="azul">Total: {{order['total']}} ${{blockchain['currency']}}</h4>
                     <hr>
-                    <h6 class="azul pb-2">ID nuevo propietario: {{user_name['user']}} </h6>
+                    <h6 class="azul pb-2">Nuevo propietario: {{user_name['user']}} </h6>
                 </div>
                 <br>
                 <div class="col-2 text-center pt-5">
@@ -125,7 +125,9 @@
                 </div>
                 <div class="col-3"></div>
                 <div class="col-12 text-center py-5">
-                    <h3 class="azul">Pulsa Explorar para ver más perfiles de NFTS</h3>
+                    <a href="/profile/{{order['receiver']}}" class="text-decoration-none">
+                        <h3 class="azul">⇦ Regresar al perfil</h3>
+                    </a>
                 </div>
             </div>
         </div>
